--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -39,8 +39,8 @@ jobs:
         id: var
         with:
           script: |
-            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : 'ZA';
-            core.setOutput('environment', 'ZA');
+            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : 'za';
+            core.setOutput('environment', environment);
 
   wait-for-deploy:
     runs-on: ubuntu-latest
@@ -61,8 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [variables, wait-for-deploy]
     env:
-      CF_USERNAME: CF_{{ needs.variables.outputs.environment }}_USERNAME
-      CF_PASSWORD: CF_{{ needs.variables.outputs.environment }}_PASSWORD
+      CF_USERNAME: CF_ZA_USERNAME
+      CF_PASSWORD: CF_ZA_PASSWORD
     steps:
 
       - name: Generate current-federal.csv
