Add new developer sandbox 'backup' infrastructure

--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -16,6 +16,7 @@ on:
           - stable
           - staging
           - development
+          - backup
           - ky
           - es
           - nl
