--- a/.github/workflows/reset-db.yaml
+++ b/.github/workflows/reset-db.yaml
@@ -16,6 +16,7 @@ on:
         options:
           - staging
           - development
+          - backup
           - ky
           - es
           - nl
