--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -2,6 +2,7 @@ name: Upload current-full.csv and current-federal.csv
 run-name: Upload current-full.csv and current-federal.csv for branch ${{ github.head_ref }}
 
 on:
+  pull_request:
   workflow_dispatch:
     inputs:
       environment:
@@ -42,9 +43,24 @@ jobs:
             const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : 'za';
             core.setOutput('environment', environment);
 
+  wait-for-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for deploy to complete
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-deploy
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: "deploy"
+          ref: ${{ github.event.pull_request.head.sha }}
+          # the maximum time to wait for the check to complete, in seconds
+          timeoutSeconds: 600 
+          # the time to wait between checks, in seconds
+          intervalSeconds: 10 
+
   upload-reports:
     runs-on: ubuntu-latest
-    needs: [variables]
+    needs: [variables, wait-for-deploy]
     env:
       CF_USERNAME: CF_{{ needs.variables.outputs.environment }}_USERNAME
       CF_PASSWORD: CF_{{ needs.variables.outputs.environment }}_PASSWORD
