--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -51,6 +51,11 @@ services:
       # AWS credentials
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+      # AWS S3 bucket credentials
+      - AWS_S3_ACCESS_KEY_ID
+      - AWS_S3_SECRET_ACCESS_KEY
+      - AWS_S3_REGION
+      - AWS_S3_BUCKET_NAME
     stdin_open: true
     tty: true
     ports:
