--- a/.github/workflows/migrate.yaml
+++ b/.github/workflows/migrate.yaml
@@ -35,7 +35,7 @@ jobs:
       CF_PASSWORD: CF_${{ github.event.inputs.environment }}_PASSWORD
     steps:
       - name: Run Django migrations for ${{ github.event.inputs.environment }}
-        uses: cloud-gov/cg-deploy-action@main
+        uses: cloud-gov/cg-cli-tools@main
         with:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
