--- a/src/zap.conf
+++ b/src/zap.conf
@@ -64,7 +64,9 @@
 10038	OUTOFSCOPE	http://app:8080/withdrawconfirmed 
 10038	OUTOFSCOPE	http://app:8080/dns
 10038	OUTOFSCOPE	http://app:8080/dnssec
+10038	OUTOFSCOPE	http://app:8080/dns/nameservers
 10038	OUTOFSCOPE	http://app:8080/dns/dnssec
+10038	OUTOFSCOPE	http://app:8080/dns/dnssec/dsdata
 # This URL always returns 404, so include it as well.
 10038	OUTOFSCOPE	http://app:8080/todo
 # OIDC isn't configured in the test environment and DEBUG=True so this gives a 500 without CSP headers
