--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -24,15 +24,14 @@ on:
           - bl
           - rjm
           - dk
-  # TODO - uncomment after #1403 is finished
-  #schedule:
+  schedule:
     # Runs every day at 5 AM UTC.
-    # - cron: "0 5 * * *"
+    - cron: "0 5 * * *"
 
 jobs:
   variables: 
     outputs:
-      environment: 'za'
+      environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
     steps:
       - name: Setting global variables
@@ -60,7 +59,7 @@ jobs:
 
   upload-reports:
     runs-on: ubuntu-latest
-    needs: [variables, wait-for-deploy]
+    needs: [variables]
     env:
       CF_USERNAME: CF_{{ needs.variables.outputs.environment }}_USERNAME
       CF_PASSWORD: CF_{{ needs.variables.outputs.environment }}_PASSWORD
