--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -39,7 +39,7 @@ jobs:
         id: var
         with:
           script: |
-            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : 'za';
+            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : 'ZA';
             core.setOutput('environment', environment);
 
   wait-for-deploy:
@@ -64,16 +64,6 @@ jobs:
       CF_USERNAME: CF_{{ needs.variables.outputs.environment }}_USERNAME
       CF_PASSWORD: CF_{{ needs.variables.outputs.environment }}_PASSWORD
     steps:
-      - name: Check secrets
-        run: |
-          if [[ -z "${{ secrets.CF_ZA_USERNAME }}" ]]; then
-            echo "CF_ZA_USERNAME is not set"
-            exit 1
-          fi
-          if [[ -z "${{ secrets.CF_ZA_PASSWORD }}" ]]; then
-            echo "CF_ZA_PASSWORD is not set"
-            exit 1
-          fi
       - name: Generate current-federal.csv
         uses: cloud-gov/cg-cli-tools@main
         with:
