--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -47,8 +47,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [variables]
     env:
-      CF_USERNAME: CF_{{ needs.variables.outputs.environment }}_USERNAME
-      CF_PASSWORD: CF_{{ needs.variables.outputs.environment }}_PASSWORD
+      CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
+      CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
     steps:
       - name: Generate current-federal.csv
         uses: cloud-gov/cg-cli-tools@main
