--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -19,8 +19,6 @@ on:
 
 jobs:
   variables:
-    env:
-      report_environment: CF_REPORT_ENV
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
@@ -30,7 +28,7 @@ jobs:
         id: var
         with:
           script: |
-            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : ${{ secrets[env.report_environment] }};
+            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : ${{ secrets[CF_REPORT_ENV] }};
             core.setOutput('environment', environment);
 
   upload-reports:
