--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -19,6 +19,8 @@ on:
 
 jobs:
   variables:
+    env:
+      DEFAULT_ENV: CF_REPORT_ENV
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
@@ -28,7 +30,7 @@ jobs:
         id: var
         with:
           script: |
-            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : ${{ secrets["CF_REPORT_ENV"] }};
+            const environment = (github && github.event && github.event.inputs) ? github.event.inputs.environment : ${{ secrets[env.DEFAULT_ENV]] }};
             core.setOutput('environment', environment);
 
   upload-reports:
