--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -1,5 +1,5 @@
 name: Upload current-full.csv and current-federal.csv
-run-name: Upload current-full.csv and current-federal.csv for branch ${{ github.head_ref }}
+run-name: Upload current-full.csv and current-federal.csv
 
 on:
   pull_request:
@@ -7,23 +7,9 @@ on:
     # Runs every day at 5 AM UTC.
     - cron: "0 5 * * *"
 
-jobs:
-  default:
-    outputs:
-      default: ${{ steps.var.outputs.default}}
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Setting global variables
-        uses: actions/github-script@v6
-        id: var
-        with:
-          script: |
-            core.setOutput("default", "CF_REPORT_ENV");
-
   variables:
-    needs: [default]
     env:
-      CF_DEFAULT: $ {{ needs.default.outputs.default }}
+      CF_DEFAULT: CF_REPORT_ENV
     outputs:
       environment: ${{ steps.var.outputs.environment}}
     runs-on: "ubuntu-latest"
