--- a/.github/workflows/daily-csv-upload.yaml
+++ b/.github/workflows/daily-csv-upload.yaml
@@ -7,28 +7,12 @@ on:
     # Runs every day at 5 AM UTC.
     - cron: "0 5 * * *"
 
-  variables:
-    env:
-      CF_DEFAULT: CF_REPORT_ENV
-    outputs:
-      environment: ${{ steps.var.outputs.environment}}
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Setting global variables
-        uses: actions/github-script@v6
-        id: var
-        with:
-          script: |
-            const environment = ${{ secrets[env.CF_DEFAULT] }};
-            core.setOutput("environment", environment);
-
   upload-reports:
     runs-on: ubuntu-latest
     needs: [variables]
     env:
-      CF_USERNAME: CF_${{ needs.variables.outputs.environment }}_USERNAME
-      CF_PASSWORD: CF_${{ needs.variables.outputs.environment }}_PASSWORD
-      CF_DEFAULT_ENV: CF_REPORT_ENV
+      CF_USERNAME: CF_${{ secrets.CF_REPORT_ENV }}_USERNAME
+      CF_PASSWORD: CF_${{ secrets.CF_REPORT_ENV }}_PASSWORD
     steps:
       - name: Generate current-federal.csv
         uses: cloud-gov/cg-cli-tools@main
@@ -36,8 +20,8 @@ on:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
-          cf_space: ${{ needs.variables.outputs.environment }}
-          cf_command: "run-task getgov-${{ needs.variables.outputs.environment }} --command 'python manage.py generate_current_federal_report' --name federal"
+          cf_space: ${{ secrets.CF_REPORT_ENV }}
+          cf_command: "run-task getgov-${{ secrets.CF_REPORT_ENV }} --command 'python manage.py generate_current_federal_report' --name federal"
 
       - name: Generate current-full.csv
         uses: cloud-gov/cg-cli-tools@main
@@ -45,6 +29,6 @@ on:
           cf_username: ${{ secrets[env.CF_USERNAME] }}
           cf_password: ${{ secrets[env.CF_PASSWORD] }}
           cf_org: cisa-dotgov
-          cf_space: ${{ needs.variables.outputs.environment }}
-          cf_command: "run-task getgov-${{ needs.variables.outputs.environment }} --command 'python manage.py generate_current_full_report' --name full"
+          cf_space: ${{ secrets.CF_REPORT_ENV }}
+          cf_command: "run-task getgov-${{ secrets.CF_REPORT_ENV }} --command 'python manage.py generate_current_full_report' --name full"
 
