--- a/src/zap.conf
+++ b/src/zap.conf
@@ -67,6 +67,7 @@
 10038	OUTOFSCOPE	http://app:8080/dns/nameservers
 10038	OUTOFSCOPE	http://app:8080/dns/dnssec
 10038	OUTOFSCOPE	http://app:8080/dns/dnssec/dsdata
+10038	OUTOFSCOPE	http://app:8080/org-name-address
 # This URL always returns 404, so include it as well.
 10038	OUTOFSCOPE	http://app:8080/todo
 # OIDC isn't configured in the test environment and DEBUG=True so this gives a 500 without CSP headers
